# LED-matrix-i2c

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LED-matrix-i2c.cpp  TODO.md  joystick.cpp  joystick.h
config/pico-sdk/src/rp2040/boot_stage2/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
config/pico-sdk/src/rp2040/boot_stage2/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
config/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: pioasmBuild-cfgcmd.txt  pioasmBuild-mkdirs.cmake
docs/: README.md  TODO.md
include/: led.h  snake.h
src/: led.cpp  main.cpp  snake.cpp
